  [Stanley Sayson]
  * Added the Bozorgnia and Campbell (2016) GMPE for V/Hassani
  
  [Michele Simionato]
  * Fixed a subtle bug: in presence of a nontrivial taxonomy mapping, loss
    curves could be not computed due to duplicated event IDs in the event
    loss table coming from a int->float conversion
  * Forced a name convention on the coefficient tables (must start with COEFFS)
  * Replaced IMT classes with factory functions
  * Changed the `minimum_distance` from a parameter of the GMPE to a
    parameter in the job.ini
  * Supported consequences split in multiple files

  [Claudia Mascandola]
  * Added the Sgobba et al. (2020) GMPE

  [Michele Simionato]
  * Improved the warning on non-contributing TRTs and made it visible
    for all calculators
  * Fixed a bug in scenarios from CSV ruptures with wrong TRTs
  * Added a limit of 12 characters to IMT names
  * Forbidded multiple inheritance in GMPE hierarchies
  * Added parameter `ignore_encoding_errors` to the job.ini
  * Extended the damage calculators to generic consequences
  * Renamed cname -> consequence in the CSV input files
  * Made sure the CSV writer writes in UTF-8

  [Graeme Weatherill]
  * Updates Kotha et al. (2020) slope/geology model coefficients

  [Michele Simionato]
  * Improved `post_risk` to use all the cores in a cluster, since it
    was using the master only
  * Improved the validation of the investigation_time in event_based_damage
  * Renamed the `losses_by_event` CSV exporter to `risk_by_event` and
    made it work consistently for losses, damages and consequences; also
    removed the `no_damage` field

  [Marco Pagani, Michele Simionato]
  * Implemented MultiFaultSources
  * Added method for computing rjb to kite surfaces

  [Michele Simionato]
  * Fixed newlines in the CSV exports on Windows

  [Graeme Weatherill]
  * Added Ameri (2014) GMPE for the Rjb case

  [Michele Simionato]
  * Optimized the slow tasks in event_based calculations